[package]
name = "glslang-sys"
version = "0.1.0"
edition = "2021"
keywords = ["ffi"]
description = "Low level bindings for the GLSL Reference Compiler"
authors = ["Yuri Edward <yuri6037@outlook.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
regex = "1.5.4"
