[package]
name = "bp3d-sal"
version = "0.1.0"
authors = ["Yuri Edward <yuri6037@outlook.com>"]
edition = "2021"
description = "Shader annotation language lexer and parser."
license = "BSD-3-Clause"
repository = "https://gitlab.com/bp3d/sdk/shader-compiler"
readme = "./README.MD"
keywords = ["bp3d", "sal"]
categories = ["game-engines", "game-development"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.4.5"
phf = { version = "0.8", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
proptest = "1.0.0"
