[package]
name = "shaderc"
version = "0.1.0"
authors = ["Yuri Edward <yuri6037@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "=3.0.0-beta.5"
regex = "1.4.5"
rglslang = { path = "../rglslang" }
sal = { path = "../sal" }
phf = { version = "0.8", features = ["macros"] }
# Cargo is broken it believes preview3 is more up-to-date than beta-1; well that's absolute bull****!!!
bpx = { version = "=4.0.0-beta-1", features = ["package", "shader", "serde"] }
serde = { version = "1.0", features = ["derive"] }
log = "0.4.14"
bp3d-logger = { path = "../../logger" }
crossbeam = "0.8.1"
bp3d-threads = "1.0.0"

