[package]
name = "shaderc"
version = "0.1.0"
authors = ["Yuri Edward <yuri6037@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.1.0"
cli-common = { path = "../cli-common" }
bp3d-shaderc = { path = "./lib" }
log = "0.4.14"
