[package]
name = "bp3d-symbols"
version = "0.1.0"
authors = ["Yuri Edward <yuri6037@outlook.com>"]
edition = "2021"
description = "Symbol data structures used in BP3D shaders built by shaderc."
license = "BSD-3-Clause"
repository = "https://gitlab.com/bp3d/sdk/shader-compiler"
readme = "./README.MD"
keywords = ["bp3d", "symbols"]
categories = ["game-engines", "game-development"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bpx = { version = "4.0.0-beta-7", features = ["sd", "serde"] }
serde = { version = "1.0", features = ["derive"] }
bp3d-sal = { path = "../sal" }
